--- a/Exam1_Review_2.html
+++ b/Exam1_Review_2.html
@@ -8,6 +8,76 @@
 <link rel="stylesheet" href="/Users/clarence/Dropbox/Clarence's%20Docs/MATH%20253/Exam%201/Review/ltx-article.css" type="text/css">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <script src="MathJax"></script>
+  <style>
+  body {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    line-height: 1.6;
+    margin: 2rem auto;
+    max-width: 75%
+    padding: 0 1rem;
+    background: #fff;
+    color: #000;
+  }
+
+  div.enumerate .item,
+  div.itemize .item,
+  div.description .item {
+    display: flex;
+    align-items: flex-start;
+    gap: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .itemlabel {
+    font-weight: bold;
+    min-width: 2rem;
+  }
+
+  .itembody {
+    flex: 1;
+  }
+
+  .displaymath, div.displaymath,
+  .ltx_equation {
+    border: none !important;
+    background: none !important;
+    box-shadow: none !important;
+    padding: 0 !important;
+    margin: 1em 0 !important;
+  }
+
+  table.ltx_eqn_table, .ltx_eqn_table {
+    border: none !important;
+    border-collapse: collapse !important;
+    box-shadow: none !important;
+    background: none !important;
+  }
+
+  .ltx_eqn_table td {
+    border: none !important;
+  }
+</style>
+
+<style>
+  div.enumerate .item,
+  div.itemize .item,
+  div.description .item {
+    display: flex;
+    align-items: baseline;
+    gap: 0.5rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .itemlabel {
+    display: inline;
+    font-weight: bold;
+  }
+
+  .itembody {
+    display: inline;
+    flex: 1;
+  }
+</style>
 </head>
 <body>
 <div class="ltx_page_main">
