--- a/Exam1_Review_solutions.html
+++ b/Exam1_Review_solutions.html
@@ -1000,16 +1000,10 @@ t=t^{3}\Rightarrow t(t^{2}-4)=0\Rightarrow t=0,t=\pm 2" display="block"><mrow><m
 </tr></tbody>
 </table>
  <div class="page-wrapper">
-    <div class="container">
-      <div class="text-content">
-        <p>Your text goes here...</p>
-      </div>
-
-      <figure>
-        <img src="circle_for_review.jpg" alt="Circle centered at the point (1,0) with a radius of 1">
-        <figcaption data-caption="..."></figcaption>
-      </figure>
-    </div>
+    <figure class="centered-figure">
+  <img src="circle_for_review.jpg" alt="Circle centered at (1,0) with a radius of 1">
+  <figcaption data-caption="Circle centered at (1,0) with a radius of 1"></figcaption>
+</figure>
   </div>
 
   <script>
