--- a/Exam1_Review_solutions.html
+++ b/Exam1_Review_solutions.html
@@ -12,12 +12,15 @@
   <title>Centered Figure Example</title>
   <style>
     body {
+      margin: 0;
+      padding: 2em;
       font-family: sans-serif;
-      max-width: 800px;
-      margin: 2em auto;
-      padding: 1em;
-      line-height: 1.6;
       background-color: #f9f9f9;
+    }
+
+    .content-wrapper {
+      max-width: 800px;
+      margin: 0 auto;
     }
 
     .centered-figure {
@@ -25,7 +28,7 @@
       padding: 1em;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
-      max-width: 600px;
+      max-width: 400px; /* Smaller figure width */
       margin: 2em auto;
       text-align: center;
     }
@@ -39,7 +42,7 @@
 
     .centered-figure figcaption {
       margin-top: 0.5em;
-      font-size: 0.9em;
+      font-size: 0.85em;
       color: #555;
     }
   </style>
