Exam1_Review_solutions.html

--- a/Exam1_Review_solutions.html
+++ b/Exam1_Review_solutions.html
@@ -989,7 +989,7 @@ t=t^{3}\Rightarrow t(t^{2}-4)=0\Rightarrow t=0,t=\pm 2" display="block"><mrow><m
 </tr></tbody>
 </table>
 <figure class="centered-figure">
-    <img src="circle_for_Review.jpg" alt="Cirlce centered at (1,0) with radius 1">
+    <img src="circle_for_review.jpg" alt="Cirlce centered at (1,0) with radius 1">
     <figcaption data-caption="Cirlce centered at (1,0) with radius 1."></figcaption>
   </figure>
 
