Exam1_Review_solutions.html

--- a/Exam1_Review_solutions.html
+++ b/Exam1_Review_solutions.html
@@ -34,6 +34,8 @@
     font-family: inherit; 
   }
 </style>
+ <script src="https://www.desmos.com/api/v1.12/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
+
 </head>
 <body>
 <div class="ltx_page_main">
@@ -1043,6 +1045,17 @@ t=t^{3}\Rightarrow t(t^{2}-4)=0\Rightarrow t=0,t=\pm 2" display="block"><mrow><m
 </tr></tbody>
 </table>
 </div>
+ <figure class="centered-figure">
+  <iframe
+    src="https://www.desmos.com/3d/hpzytefqhj"
+    width="100%"
+    height="500"
+    style="border:0; border-radius: 8px;"
+    title="Desmos Graph"
+    allowfullscreen>
+  </iframe>
+  <figcaption data-caption="A rotating paraboloid modeled in Desmos."></figcaption>
+</figure>
 </li>
 <li id="S0.I1.i11.I1.i3" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">(c)</span> 
