--- a/Exam1_Review_solutions.html
+++ b/Exam1_Review_solutions.html
@@ -34,6 +34,11 @@
     font-family: inherit; 
   }
 </style>
+ <style>
+    p {
+      line-height: 2em;
+    }
+  </style>
  <script src="https://www.desmos.com/api/v1.12/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
  <script type="text/javascript" id="MathJax-script" async
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
