Exam1_Review_solutions.html

--- a/Exam1_Review_solutions.html
+++ b/Exam1_Review_solutions.html
@@ -43,7 +43,21 @@
  <script type="text/javascript" id="MathJax-script" async
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js">
 </script>
+<style>
+  ol {
+    /* Set list-style-position to inside to bring the numbers within the list item box */
+    list-style-position: inside;
+    /* Optionally, set a margin-left to create consistent spacing */
+    margin-left: 20px; 
+    /* Remove padding to ensure the numbers are aligned with the text */
+    padding-left: 0;
+  }
 
+  /* Adjust alignment within list items if needed */
+  li {
+    text-align: left;
+  }
+</style>
 </head>
 <body>
 <div class="ltx_page_main">
