Exam2_Review.html

--- a/Exam2_Review.html
+++ b/Exam2_Review.html
@@ -9,10 +9,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <script src="MathJax"></script>
   <style>
-    .double-spaced {
-      line-height: 2;
-    }
-  </style>
+      p {
+        line-height: 2.5; /* Double spacing for all paragraphs */
+      }
+    </style>
 </head>
 <body>
 <div class="ltx_page_main">
