Exam2_Review.html

--- a/Exam2_Review.html
+++ b/Exam2_Review.html
@@ -13,8 +13,19 @@
         line-height: 2.5; /* Double spacing for all paragraphs */
       }
     </style>
+ <style>
+  .bottom-button {
+    position: fixed; /* Or position: absolute; */
+    bottom: 0;
+    left: 50%; /* Center horizontally */
+    transform: translateX(-50%); /* Adjust for horizontal centering */
+  }
+</style>
 </head>
 <body>
+ <a href="https://baneycv.github.io/Calculus-III/Exam2_Review_Solutions.html">
+  <button>Go to Solutions</button>
+</a>
 <div class="ltx_page_main">
 <div class="ltx_page_content">
 <article class="ltx_document">
