Exam2_Review.html

--- a/Exam2_Review.html
+++ b/Exam2_Review.html
@@ -13,14 +13,26 @@
         line-height: 2.5; /* Double spacing for all paragraphs */
       }
     </style>
- <style>
-  .bottom-button {
-    position: fixed; /* Or position: absolute; */
-    bottom: 0;
-    left: 50%; /* Center horizontally */
-    transform: translateX(-50%); /* Adjust for horizontal centering */
-  }
-</style>
+.bottom-button {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      padding: 15px 30px;
+      font-size: 18px;
+      background-color: #007BFF;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      text-decoration: none;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    }
+
+    .bottom-button:hover {
+      background-color: #0056b3;
+    }
+  </style>
 </head>
 <body>
  <a href="https://baneycv.github.io/Calculus-III/Exam2_Review_Solutions.html">
