Exam2_Review.html

--- a/Exam2_Review.html
+++ b/Exam2_Review.html
@@ -35,8 +35,7 @@
   </style>
 </head>
 <body>
- <a href="https://baneycv.github.io/Calculus-III/Exam2_Review_Solutions.html">
-  <button>Go to Solutions</button>
+ <a href="https://baneycv.github.io/Calculus-III/Exam2_Review_Solutions.html" class="bottom-button">Go to Solutions</a>
 </a>
 <div class="ltx_page_main">
 <div class="ltx_page_content">
