Exam2_Review.html

--- a/Exam2_Review.html
+++ b/Exam2_Review.html
@@ -13,6 +13,7 @@
         line-height: 2.5; /* Double spacing for all paragraphs */
       }
     </style>
+ <style>
 .bottom-button {
       position: fixed;
       bottom: 20px;
