--- a/Exam3_Review_solutions.html
+++ b/Exam3_Review_solutions.html
@@ -342,6 +342,17 @@ This integral is straightforward:</p>
 <br class="ltx_break"><span class="ltx_text ltx_font_bold">Solution:
 <br class="ltx_break"></span></p>
 </div>
+ <figure class="centered-figure">
+  <iframe
+    src="https://www.desmos.com/3d/pebtjx92gu"
+    width="100%"
+    height="500"
+    style="border:0; border-radius: 8px;"
+    title="Desmos Graph"
+    allowfullscreen>
+  </iframe>
+  <figcaption data-caption="The intersection of the plane and cylinder."></figcaption>
+</figure>
 <div id="S0.I1.i3.p2" class="ltx_para">
 <p class="ltx_p">To evaluate this, we use polar coordinates:</p>
 <table id="S0.Ex26" class="ltx_equation ltx_eqn_table">
