--- a/Exam3_Review_solutions.html
+++ b/Exam3_Review_solutions.html
@@ -676,6 +676,27 @@ This integral is straightforward:</p>
 <div id="S0.I1.i5.I1.i2.p1" class="ltx_para">
 <p class="ltx_p">Compute the mass <math id="S0.I1.i5.I1.i2.p1.m1" class="ltx_Math" alttext="m" display="inline"><mi>m</mi></math> from part 3(a). <span class="ltx_text ltx_font_bold">Note:</span> For full credit, simplify your answer as much as possible. <span class="ltx_text ltx_font_italic">Hint: You may want to consider using spherical cooridnates.
 <br class="ltx_break"></span><span class="ltx_text ltx_font_bold">Solution:
+ <figure class="centered-figure">
+  <iframe
+    src="<figure class="centered-figure">
+  <iframe
+    src="https://www.desmos.com/3d/ve8wosiete"
+    width="100%"
+    height="500"
+    style="border:0; border-radius: 8px;"
+    title="Desmos Graph"
+    allowfullscreen>
+  </iframe>
+  <figcaption data-caption="The spheres of radii 1 (in orange) and 4 (in gray) with the cone."></figcaption>
+</figure>"
+    width="100%"
+    height="500"
+    style="border:0; border-radius: 8px;"
+    title="Desmos Graph"
+    allowfullscreen>
+  </iframe>
+  <figcaption data-caption="The intersection of the plane and cylinder."></figcaption>
+</figure>
 <br class="ltx_break"></span>Convert to Spherical Coordinates.</p>
 </div>
 <div id="S0.I1.i5.I1.i2.p2" class="ltx_para">
