--- a/Exam3_Review_solutions.html
+++ b/Exam3_Review_solutions.html
@@ -679,7 +679,17 @@ This integral is straightforward:</p>
  
 <br class="ltx_break"></span>Convert to Spherical Coordinates.</p>
 </div>
-
+ <figure class="centered-figure">
+  <iframe
+    src="https://www.desmos.com/3d/ve8wosiete"
+    width="100%"
+    height="500"
+    style="border:0; border-radius: 8px;"
+    title="Desmos Graph"
+    allowfullscreen>
+  </iframe>
+  <figcaption data-caption="Sphere of radius 1 in orange, sphere of radius 4 in gray, and cone."></figcaption>
+</figure>
 <div id="S0.I1.i5.I1.i2.p2" class="ltx_para">
 <p class="ltx_p">Let:</p>
 <table id="S0.Ex54" class="ltx_equation ltx_eqn_table">
