--- a/Exam1_Review_solutions.html
+++ b/Exam1_Review_solutions.html
@@ -1055,7 +1055,20 @@ t=t^{3}\Rightarrow t(t^{2}-4)=0\Rightarrow t=0,t=\pm 2" display="block"><mrow><m
 <div id="S0.I1.i11.I1.i1.p1" class="ltx_para">
 <p class="ltx_p">Sketch the graph of the paraboloid.
 <br class="ltx_break"><span class="ltx_text ltx_font_bold">Solution:</span> This is an inverted circular paraboloid opening downward with vertex at <math id="S0.I1.i11.I1.i1.p1.m1" class="ltx_Math" alttext="(0,0,4)" display="inline"><mrow><mo stretchy="false">(</mo><mn>0</mn><mo>,</mo><mn>0</mn><mo>,</mo><mn>4</mn><mo stretchy="false">)</mo></mrow></math>.</p>
-</div>
+
+ </div>
+ <figure class="centered-figure">
+  <iframe
+    src="https://www.desmos.com/3D/356c8275b1"
+    width="100%"
+    height="500"
+    style="border:0; border-radius: 8px;"
+    title="Desmos Graph"
+    allowfullscreen>
+  </iframe>
+  <figcaption data-caption="The paraboloid."></figcaption>
+</figure>
+<div id="S0.I1.i3.p2" class="ltx_para">
 </li>
 <li id="S0.I1.i11.I1.i2" class="ltx_item" style="list-style-type:none;">
 <span class="ltx_tag ltx_tag_item">(b)</span> 
