--- a/Exam1_Review_solutions.html
+++ b/Exam1_Review_solutions.html
@@ -1043,6 +1043,10 @@ t=t^{3}\Rightarrow t(t^{2}-4)=0\Rightarrow t=0,t=\pm 2" display="block"><mrow><m
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr></tbody>
 </table>
+ <figure>
+    <img src="circle_for_review.jpg" alt="Graph of circle" width="400">
+    
+  </figure>
 </div>
 </li>
 <li id="S0.I1.i11" class="ltx_item" style="list-style-type:none;">
