Update equations in Exam3 review solutions

--- a/Exam3_Review_solutions.html
+++ b/Exam3_Review_solutions.html
@@ -739,7 +739,7 @@ This integral is straightforward:</p>
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
-<td class="ltx_eqn_cell ltx_align_center"><math id="S0.Ex58.m1" class="ltx_Math" alttext="\phi\leq\tan^{-1}\left(\frac{1}{\sqrt{3}}\right)=\frac{\pi}{6}." display="block"><mrow><mrow><mi>ϕ</mi><mo>≤</mo><mrow><msup><mi>tan</mi><mrow><mo>−</mo><mn>1</mn></mrow></msup><mo>⁡</mo><mrow><mo>(</mo><mfrac><mn>1</mn><msqrt><mn>3</mn></msqrt></mfrac><mo>)</mo></mrow></mrow><mo>=</mo><mfrac><mi>π</mi><mn>6</mn></mfrac></mrow><mo lspace="0em">.</mo></mrow></math></td>
+<td class="ltx_eqn_cell ltx_align_center"><math id="S0.Ex58.m1" class="ltx_Math" alttext="\phi\leq\tan^{-1}\left(\sqrt{3}\right)=\frac{\pi}{3}." display="block"><mrow><mrow><mi>ϕ</mi><mo>≤</mo><mrow><msup><mi>tan</mi><mrow><mo>−</mo><mn>1</mn></mrow></msup><mo>⁡</mo><mrow><mo>(</mo><msqrt><mn>3</mn></msqrt><mo>)</mo></mrow></mrow><mo>=</mo><mfrac><mi>π</mi><mn>3</mn></mfrac></mrow><mo lspace="0em">.</mo></mrow></math></td>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr></tbody>
 </table>
@@ -750,7 +750,7 @@ This integral is straightforward:</p>
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
-<td class="ltx_eqn_cell ltx_align_center"><math id="S0.Ex59.m1" class="ltx_Math" alttext="0\leq\theta\leq 2\pi,\quad 0\leq\phi\leq\frac{\pi}{6},\quad 1\leq\rho\leq 2." display="block"><mrow><mrow><mrow><mn>0</mn><mo>≤</mo><mi>θ</mi><mo>≤</mo><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></mrow><mo rspace="1.167em">,</mo><mrow><mn>0</mn><mo>≤</mo><mi>ϕ</mi><mo>≤</mo><mfrac><mi>π</mi><mn>6</mn></mfrac></mrow><mo rspace="1.167em">,</mo><mrow><mn>1</mn><mo>≤</mo><mi>ρ</mi><mo>≤</mo><mn>2</mn></mrow></mrow><mo lspace="0em">.</mo></mrow></math></td>
+<td class="ltx_eqn_cell ltx_align_center"><math id="S0.Ex59.m1" class="ltx_Math" alttext="0\leq\theta\leq 2\pi,\quad 0\leq\phi\leq\frac{\pi}{3},\quad 1\leq\rho\leq 2." display="block"><mrow><mrow><mrow><mn>0</mn><mo>≤</mo><mi>θ</mi><mo>≤</mo><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></mrow><mo rspace="1.167em">,</mo><mrow><mn>0</mn><mo>≤</mo><mi>ϕ</mi><mo>≤</mo><mfrac><mi>π</mi><mn>3</mn></mfrac></mrow><mo rspace="1.167em">,</mo><mrow><mn>1</mn><mo>≤</mo><mi>ρ</mi><mo>≤</mo><mn>2</mn></mrow></mrow><mo lspace="0em">.</mo></mrow></math></td>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr></tbody>
 </table>
@@ -761,8 +761,8 @@ This integral is straightforward:</p>
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
-<td class="ltx_eqn_cell ltx_align_center"><math id="S0.Ex60.m1" class="ltx_Math" alttext="m=\int_{0}^{2\pi}\int_{0}^{\frac{\pi}{6}}\int_{1}^{2}\rho^{3}\sin\phi\,d\rho\,%
-d\phi\,d\theta." display="block"><mrow><mrow><mi>m</mi><mo rspace="0.111em">=</mo><mrow><msubsup><mo rspace="0em">∫</mo><mn>0</mn><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></msubsup><mrow><msubsup><mo rspace="0em">∫</mo><mn>0</mn><mfrac><mi>π</mi><mn>6</mn></mfrac></msubsup><mrow><msubsup><mo>∫</mo><mn>1</mn><mn>2</mn></msubsup><mrow><msup><mi>ρ</mi><mn>3</mn></msup><mo lspace="0.167em">⁢</mo><mrow><mi>sin</mi><mo lspace="0.167em">⁡</mo><mrow><mi>ϕ</mi><mo lspace="0.170em">⁢</mo><mi>d</mi><mo>⁢</mo><mi>ρ</mi><mo lspace="0.170em">⁢</mo><mi>d</mi><mo>⁢</mo><mi>ϕ</mi><mo lspace="0.170em">⁢</mo><mi>d</mi><mo>⁢</mo><mi>θ</mi></mrow></mrow></mrow></mrow></mrow></mrow></mrow><mo lspace="0em">.</mo></mrow></math></td>
+<td class="ltx_eqn_cell ltx_align_center"><math id="S0.Ex60.m1" class="ltx_Math" alttext="m=\int_{0}^{2\pi}\int_{0}^{\frac{\pi}{3}}\int_{1}^{2}\rho^{3}\sin\phi\,d\rho\,%
+d\phi\,d\theta." display="block"><mrow><mrow><mi>m</mi><mo rspace="0.111em">=</mo><mrow><msubsup><mo rspace="0em">∫</mo><mn>0</mn><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></msubsup><mrow><msubsup><mo rspace="0em">∫</mo><mn>0</mn><mfrac><mi>π</mi><mn>3</mn></mfrac></msubsup><mrow><msubsup><mo>∫</mo><mn>1</mn><mn>2</mn></msubsup><mrow><msup><mi>ρ</mi><mn>3</mn></msup><mo lspace="0.167em">⁢</mo><mrow><mi>sin</mi><mo lspace="0.167em">⁡</mo><mrow><mi>ϕ</mi><mo lspace="0.170em">⁢</mo><mi>d</mi><mo>⁢</mo><mi>ρ</mi><mo lspace="0.170em">⁢</mo><mi>d</mi><mo>⁢</mo><mi>ϕ</mi><mo lspace="0.170em">⁢</mo><mi>d</mi><mo>⁢</mo><mi>θ</mi></mrow></mrow></mrow></mrow></mrow></mrow></mrow><mo lspace="0em">.</mo></mrow></math></td>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr></tbody>
 </table>
@@ -785,8 +785,8 @@ d\phi\,d\theta." display="block"><mrow><mrow><mi>m</mi><mo rspace="0.111em">=</m
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
-<td class="ltx_eqn_cell ltx_align_center"><math id="S0.Ex62.m1" class="ltx_Math" alttext="m=\int_{0}^{2\pi}\int_{0}^{\frac{\pi}{6}}\frac{15}{4}\sin\phi\,d\phi\,d\theta=%
-\frac{15}{4}\int_{0}^{2\pi}d\theta\int_{0}^{\frac{\pi}{6}}\sin\phi\,d\phi." display="block"><mrow><mrow><mi>m</mi><mo rspace="0.111em">=</mo><mrow><msubsup><mo rspace="0em">∫</mo><mn>0</mn><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></msubsup><mrow><msubsup><mo>∫</mo><mn>0</mn><mfrac><mi>π</mi><mn>6</mn></mfrac></msubsup><mrow><mfrac><mn>15</mn><mn>4</mn></mfrac><mo lspace="0.167em">⁢</mo><mrow><mi>sin</mi><mo lspace="0.167em">⁡</mo><mrow><mi>ϕ</mi><mo lspace="0.170em">⁢</mo><mi>d</mi><mo>⁢</mo><mi>ϕ</mi><mo lspace="0.170em">⁢</mo><mi>d</mi><mo>⁢</mo><mi>θ</mi></mrow></mrow></mrow></mrow></mrow><mo>=</mo><mrow><mfrac><mn>15</mn><mn>4</mn></mfrac><mo>⁢</mo><mrow><msubsup><mo>∫</mo><mn>0</mn><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></msubsup><mrow><mrow><mo lspace="0em" rspace="0em">𝑑</mo><mi>θ</mi></mrow><mo>⁢</mo><mrow><msubsup><mo>∫</mo><mn>0</mn><mfrac><mi>π</mi><mn>6</mn></mfrac></msubsup><mrow><mi>sin</mi><mo lspace="0.167em">⁡</mo><mrow><mi>ϕ</mi><mo lspace="0.170em">⁢</mo><mi>d</mi><mo>⁢</mo><mi>ϕ</mi></mrow></mrow></mrow></mrow></mrow></mrow></mrow><mo lspace="0em">.</mo></mrow></math></td>
+<td class="ltx_eqn_cell ltx_align_center"><math id="S0.Ex62.m1" class="ltx_Math" alttext="m=\int_{0}^{2\pi}\int_{0}^{\frac{\pi}{3}}\frac{15}{4}\sin\phi\,d\phi\,d\theta=%
+\frac{15}{4}\int_{0}^{2\pi}d\theta\int_{0}^{\frac{\pi}{3}}\sin\phi\,d\phi." display="block"><mrow><mrow><mi>m</mi><mo rspace="0.111em">=</mo><mrow><msubsup><mo rspace="0em">∫</mo><mn>0</mn><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></msubsup><mrow><msubsup><mo>∫</mo><mn>0</mn><mfrac><mi>π</mi><mn>3</mn></mfrac></msubsup><mrow><mfrac><mn>15</mn><mn>4</mn></mfrac><mo lspace="0.167em">⁢</mo><mrow><mi>sin</mi><mo lspace="0.167em">⁡</mo><mrow><mi>ϕ</mi><mo lspace="0.170em">⁢</mo><mi>d</mi><mo>⁢</mo><mi>ϕ</mi><mo lspace="0.170em">⁢</mo><mi>d</mi><mo>⁢</mo><mi>θ</mi></mrow></mrow></mrow></mrow></mrow><mo>=</mo><mrow><mfrac><mn>15</mn><mn>4</mn></mfrac><mo>⁢</mo><mrow><msubsup><mo>∫</mo><mn>0</mn><mrow><mn>2</mn><mo>⁢</mo><mi>π</mi></mrow></msubsup><mrow><mrow><mo lspace="0em" rspace="0em">𝑑</mo><mi>θ</mi></mrow><mo>⁢</mo><mrow><msubsup><mo>∫</mo><mn>0</mn><mfrac><mi>π</mi><mn>3</mn></mfrac></msubsup><mrow><mi>sin</mi><mo lspace="0.167em">⁡</mo><mrow><mi>ϕ</mi><mo lspace="0.170em">⁢</mo><mi>d</mi><mo>⁢</mo><mi>ϕ</mi></mrow></mrow></mrow></mrow></mrow></mrow></mrow><mo lspace="0em">.</mo></mrow></math></td>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr></tbody>
 </table>
@@ -804,8 +804,8 @@ d\phi\,d\theta." display="block"><mrow><mrow><mi>m</mi><mo rspace="0.111em">=</m
 
 <tbody><tr class="ltx_equation ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
-<td class="ltx_eqn_cell ltx_align_center"><math id="S0.Ex64.m1" class="ltx_Math" alttext="\int_{0}^{\frac{\pi}{6}}\sin\phi\,d\phi=[-\cos\phi]_{0}^{\frac{\pi}{6}}=-\cos%
-\left(\frac{\pi}{6}\right)+\cos(0)=-\frac{\sqrt{3}}{2}+1." display="block"><mrow><mrow><mrow><msubsup><mo>∫</mo><mn>0</mn><mfrac><mi>π</mi><mn>6</mn></mfrac></msubsup><mrow><mi>sin</mi><mo lspace="0.167em">⁡</mo><mrow><mi>ϕ</mi><mo lspace="0.170em">⁢</mo><mi>d</mi><mo>⁢</mo><mi>ϕ</mi></mrow></mrow></mrow><mo>=</mo><msubsup><mrow><mo stretchy="false">[</mo><mrow><mo rspace="0.167em">−</mo><mrow><mi>cos</mi><mo lspace="0.167em">⁡</mo><mi>ϕ</mi></mrow></mrow><mo stretchy="false">]</mo></mrow><mn>0</mn><mfrac><mi>π</mi><mn>6</mn></mfrac></msubsup><mo>=</mo><mrow><mrow><mo rspace="0.167em">−</mo><mrow><mi>cos</mi><mo>⁡</mo><mrow><mo>(</mo><mfrac><mi>π</mi><mn>6</mn></mfrac><mo>)</mo></mrow></mrow></mrow><mo>+</mo><mrow><mi>cos</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mn>0</mn><mo stretchy="false">)</mo></mrow></mrow></mrow><mo>=</mo><mrow><mrow><mo>−</mo><mfrac><msqrt><mn>3</mn></msqrt><mn>2</mn></mfrac></mrow><mo>+</mo><mn>1</mn></mrow></mrow><mo lspace="0em">.</mo></mrow></math></td>
+<td class="ltx_eqn_cell ltx_align_center"><math id="S0.Ex64.m1" class="ltx_Math" alttext="\int_{0}^{\frac{\pi}{3}}\sin\phi\,d\phi=[-\cos\phi]_{0}^{\frac{\pi}{3}}=-\cos%
+\left(\frac{\pi}{3}\right)+\cos(0)=\frac{1}{2}." display="block"><mrow><mrow><mrow><msubsup><mo>∫</mo><mn>0</mn><mfrac><mi>π</mi><mn>3</mn></mfrac></msubsup><mrow><mi>sin</mi><mo lspace="0.167em">⁡</mo><mrow><mi>ϕ</mi><mo lspace="0.170em">⁢</mo><mi>d</mi><mo>⁢</mo><mi>ϕ</mi></mrow></mrow></mrow><mo>=</mo><msubsup><mrow><mo stretchy="false">[</mo><mrow><mo rspace="0.167em">−</mo><mrow><mi>cos</mi><mo lspace="0.167em">⁡</mo><mi>ϕ</mi></mrow></mrow><mo stretchy="false">]</mo></mrow><mn>0</mn><mfrac><mi>π</mi><mn>3</mn></mfrac></msubsup><mo>=</mo><mrow><mrow><mo rspace="0.167em">−</mo><mrow><mi>cos</mi><mo>⁡</mo><mrow><mo>(</mo><mfrac><mi>π</mi><mn>3</mn></mfrac><mo>)</mo></mrow></mrow></mrow><mo>+</mo><mrow><mi>cos</mi><mo>⁡</mo><mrow><mo stretchy="false">(</mo><mn>0</mn><mo stretchy="false">)</mo></mrow></mrow></mrow><mo>=</mo><mfrac><mn>1</mn><mn>2</mn></mfrac></mrow><mo lspace="0em">.</mo></mrow></math></td>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr></tbody>
 </table>
@@ -819,14 +819,14 @@ d\phi\,d\theta." display="block"><mrow><mrow><mi>m</mi><mo rspace="0.111em">=</m
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
 <td class="ltx_td ltx_align_right ltx_eqn_cell"><math id="S0.Ex65.m1" class="ltx_Math" alttext="\displaystyle m" display="inline"><mi>m</mi></math></td>
 <td class="ltx_td ltx_align_center ltx_eqn_cell"><math id="S0.Ex65.m2" class="ltx_Math" alttext="\displaystyle=" display="inline"><mo>=</mo></math></td>
-<td class="ltx_td ltx_align_left ltx_eqn_cell"><math id="S0.Ex65.m3" class="ltx_Math" alttext="\displaystyle\frac{15}{4}\cdot 2\pi\cdot\left(1-\frac{\sqrt{3}}{2}\right)" display="inline"><mrow><mrow><mrow><mstyle displaystyle="true"><mfrac><mn>15</mn><mn>4</mn></mfrac></mstyle><mo lspace="0.222em" rspace="0.222em">⋅</mo><mn>2</mn></mrow><mo>⁢</mo><mi>π</mi></mrow><mo lspace="0.222em" rspace="0.222em">⋅</mo><mrow><mo>(</mo><mrow><mn>1</mn><mo>−</mo><mstyle displaystyle="true"><mfrac><msqrt><mn>3</mn></msqrt><mn>2</mn></mfrac></mstyle></mrow><mo>)</mo></mrow></mrow></math></td>
+<td class="ltx_td ltx_align_left ltx_eqn_cell"><math id="S0.Ex65.m3" class="ltx_Math" alttext="\displaystyle\frac{15}{4}\cdot 2\pi\cdot\left(\frac{1}{2}\right)" display="inline"><mrow><mrow><mrow><mstyle displaystyle="true"><mfrac><mn>15</mn><mn>4</mn></mfrac></mstyle><mo lspace="0.222em" rspace="0.222em">⋅</mo><mn>2</mn></mrow><mo>⁢</mo><mi>π</mi></mrow><mo lspace="0.222em" rspace="0.222em">⋅</mo><mrow><mo>(</mo><mstyle displaystyle="true"><mfrac><mn>1</mn><mn>2</mn></mfrac></mstyle><mo>)</mo></mrow></mrow></math></td>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 <tr class="ltx_eqn_row ltx_align_baseline">
 <td class="ltx_eqn_cell ltx_eqn_center_padleft"></td>
 <td class="ltx_td ltx_eqn_cell"></td>
 <td class="ltx_td ltx_align_center ltx_eqn_cell"><math id="S0.Ex66.m1" class="ltx_Math" alttext="\displaystyle=" display="inline"><mo>=</mo></math></td>
-<td class="ltx_td ltx_align_left ltx_eqn_cell"><math id="S0.Ex66.m2" class="ltx_Math" alttext="\displaystyle\frac{15\pi}{2}\left(1-\frac{\sqrt{3}}{2}\right)." display="inline"><mrow><mrow><mstyle displaystyle="true"><mfrac><mrow><mn>15</mn><mo>⁢</mo><mi>π</mi></mrow><mn>2</mn></mfrac></mstyle><mo>⁢</mo><mrow><mo>(</mo><mrow><mn>1</mn><mo>−</mo><mstyle displaystyle="true"><mfrac><msqrt><mn>3</mn></msqrt><mn>2</mn></mfrac></mstyle></mrow><mo>)</mo></mrow></mrow><mo lspace="0em">.</mo></mrow></math></td>
+<td class="ltx_td ltx_align_left ltx_eqn_cell"><math id="S0.Ex66.m2" class="ltx_Math" alttext="\displaystyle\frac{15\pi}{2}" display="inline"><mstyle displaystyle="true"><mfrac><mrow><mn>15</mn><mo>⁢</mo><mi>π</mi></mrow><mn>2</mn></mfrac></mstyle></math></td>
 <td class="ltx_eqn_cell ltx_eqn_center_padright"></td>
 </tr>
 </tbody>
